Bug 382652 - Navigate to breakpoint not working
Summary: Navigate to breakpoint not working
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: UI: general (other bugs)
Version First Reported In: 5.1.1
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-24 11:01 UTC by Michael Erskine
Modified: 2017-07-24 20:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Erskine 2017-07-24 11:01:36 UTC
In the Breakpoints Tool View I would expect to be able to navigate to a breakpoint by selecting it as in Kdevelop 4.6 where clicking a breakpoint row in the Location column opens an editor at the breakpoint. In Kdevelop 5.1.1 clicking a breakpoint in the Location column does not open the location and there is no obvious UI feature (e.g. context menu option) that provides this.
Comment 1 Sven Brauch 2017-07-24 13:11:48 UTC
Git commit 6c6329f2373e43ca6a9aa4886c4e7c1d0e75975e by Sven Brauch.
Committed on 24/07/2017 at 13:11.
Pushed by brauch into branch 'master'.

make breakpoint "location" non-editable in item model

fixes

Clicking the location is the more useful behaviour than editing
the line number by hand. I don't see why you would want to do that.

M  +1    -2    debugger/breakpoint/breakpointmodel.cpp

https://commits.kde.org/kdevplatform/6c6329f2373e43ca6a9aa4886c4e7c1d0e75975e
Comment 2 Kevin Funk 2017-07-24 20:45:29 UTC
Git commit b4770057b79a02f77cc5d0500ac6edc5837a2103 by Kevin Funk, on behalf of Sven Brauch.
Committed on 24/07/2017 at 20:43.
Pushed by kfunk into branch '5.1'.

make breakpoint "location" non-editable in item model

fixes

Clicking the location is the more useful behaviour than editing
the line number by hand. I don't see why you would want to do that.

(cherry picked from commit 6c6329f2373e43ca6a9aa4886c4e7c1d0e75975e)

M  +1    -2    debugger/breakpoint/breakpointmodel.cpp

https://commits.kde.org/kdevplatform/b4770057b79a02f77cc5d0500ac6edc5837a2103