make breakpoint "location" non-editable in item model

fixes
BUG:382652

Clicking the location is the more useful behaviour than editing
the line number by hand. I don't see why you would want to do that.